# win95-demoapp

./: README.md
appberry-env-no-node-modules/: pyproject.toml
appberry-env-no-node-modules/backend/: .dev.vars  .gitignore  dev.sh  drizzle.config.ts  package.json  test.sh  tsconfig.json  tsconfig.tsbuildinfo  worker-configuration.d.ts  wrangler.jsonc
appberry-env-no-node-modules/backend/drizzle/: 0000_init.sql
appberry-env-no-node-modules/backend/drizzle/meta/: 0000_snapshot.json  _journal.json
appberry-env-no-node-modules/backend/src/: index.d.ts  index.js  index.ts
appberry-env-no-node-modules/backend/src/db/: schema.d.ts  schema.js  schema.ts
appberry-env-no-node-modules/backend/test/: index.spec.ts
appberry-env-no-node-modules/frontend/: .env.development  README.md  build.sh  dev.sh  package.json  tsconfig.app.json  vite.config.ts
appberry-env-no-node-modules/frontend/scripts/: screenshot.js  smoke-test.js
appberry-env-no-node-modules/frontend/src/: app.tsx  error-boundary.tsx  index.css
appberry-env-no-node-modules/frontend/src/constants/: server-url.ts
